fixed overflow

--- a/client/public/global.css
+++ b/client/public/global.css
@@ -4,20 +4,6 @@ html, body {
 	height: 100%;
 }
 
-label {
-	display: block;
-}
-
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-}
 
 @font-face {
   font-family: 'Saira Stencil One';
@@ -49,5 +35,8 @@ body {
 	margin: 0;
 	padding:0;
 	box-sizing: border-box;
+	background-color: #0e1535;
+		background-size: cover;
+		overflow-x:hidden;
 	font-family: 'Roboto Condensed', 'Saira Stencil One';
 }
